--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>Kimi's hihg school experience</title>
+  <title>Kimi's high school experience</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -17,16 +17,21 @@
 
   <!-- Header -->
   <header id="header" class="alt">
-    <div class="logo"><a href="index.html">Kimi <span>'s hihg school experience</span></a></div>
+    <div class="logo"><a href="index.html">Kimi <span>'s high school experience</span></a></div>
     <a href="#menu">Menu</a>
   </header>
 
   <!-- Nav -->
   <nav id="menu">
     <ul class="links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="generic.html">Generic</a></li>
-      <li><a href="elements.html">Elements</a></li>
+      <li><a href="index.html">主頁</a></li>
+      <li><a href="Inquiry_and_Practice.html">探究與實作</a></li>
+      <li><a href="School_Carnivals.html">校慶園遊會</a></li>
+      <li><a href="physical.html">物理</a></li>
+      <li><a href="chemistry.html">化學</a></li>
+      <li><a href="biology.html">生物</a></li>
+      <li><a href="mathematics.html">數學</a></li>
+
     </ul>
   </nav>
 
