--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -54,6 +54,8 @@
 						<p>高二上學期</p>
 						<h2>彈力四射</h2>
 					</header>
+					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="640"
+						height="480"></iframe>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis
 						neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est
 						non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui
