--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -54,8 +54,6 @@
 						<p>高二上學期</p>
 						<h2>彈力四射</h2>
 					</header>
-					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840s"
-						height="1188"></iframe>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis
 						neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est
 						non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui
@@ -80,6 +78,10 @@
 						Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in
 						faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit
 						libero. </p>
+					<h3>統整總報告</h3>
+					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840s"
+						height="1188"></iframe>
+
 				</div>
 			</div>
 		</div>
