--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -54,30 +54,8 @@
 						<p>高二上學期</p>
 						<h2>彈力四射</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis
-						neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est
-						non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui
-						vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In
-						nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel
-						lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero
-						vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante
-						ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat
-						eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu,
-						vitae euismod nisl sapien vitae tortor.</p>
-
-					<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu,
-						accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla
-						pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci,
-						ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
-
-					<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec
-						facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus.
-						Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis
-						facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate
-						risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis.
-						Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in
-						faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit
-						libero. </p>
+					<h3>心得</h3>
+					<p>經過了一個學期的努力，我總算完成了這一項探究與實作的浩大工程</p>
 					<h3>統整總報告</h3>
 					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840s"
 						height="1188"></iframe>
