--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -54,11 +54,27 @@
 						<p>高二上學期</p>
 						<h2>彈力四射</h2>
 					</header>
-					<h3>心得</h3>
-					<p>經過了一個學期的努力，我總算完成了這一項探究與實作的浩大工程</p>
+					<h3>第一周</h3>
+					<h3>第二周</h3>
+					<h3>第三周</h3>
+					<h3>第四周</h3>
+					<h3>第五周</h3>
+					<h3>第六周</h3>
+					<h3>第七周</h3>
+					<h3>第八周</h3>
+					<h3>第九周</h3>
+					<h3>第十周</h3>
+					<h3>第十一周</h3>
+					<h3>第十二周</h3>
 					<h3>統整總報告</h3>
 					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840s"
 						height="1188"></iframe>
+					<h3>上台報告影片:第一次</h3>
+					<h3>上台報告影片:第二次(示範組)</h3>
+					<h3>與同學分享海報</h3>
+					<h3>心得</h3>
+					<p>經過了一個學期的努力，我總算完成了這一項探究與實作的浩大工程。在這一路上我學了非常多的知識，從最開始完全不知道交聯作用是甚麼就開始實驗，第一次嘗試時，完全不知道該怎麼樣才能把洋菜凝膠給放進扭蛋模具裡面，一直燙到自己的手，而且求裡面還充滿了空氣，完全不能用，導致第一周的實驗就慘澹收場
+					</p>
 
 				</div>
 			</div>
