--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -72,6 +72,8 @@
 					<h3>上台報告影片:第一次</h3>
 					<h3>上台報告影片:第二次(示範組)</h3>
 					<h3>與同學分享海報</h3>
+					<iframe src="https://drive.google.com/file/d/1qC6TUjz7J61hsPydA2YZBvX_6vJzaceO/preview" width="640"
+						height="480"></iframe>
 					<h3>心得</h3>
 					<p>經過了一個學期的努力，我總算完成了這一項探究與實作的浩大工程。在這一路上我學了非常多的知識，從最開始完全不知道交聯作用是甚麼就開始實驗，第一次嘗試時，完全不知道該怎麼樣才能把洋菜凝膠給放進扭蛋模具裡面，一直燙到自己的手，而且求裡面還充滿了空氣，完全不能用，導致第一周的實驗就慘澹收場
 					</p>
