--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -54,26 +54,51 @@
 						<p>高二上學期</p>
 						<h2>彈力四射</h2>
 					</header>
-					<h3>第一周</h3>
-					<h3>第二周</h3>
-					<h3>第三周</h3>
-					<h3>第四周</h3>
-					<h3>第五周</h3>
-					<h3>第六周</h3>
-					<h3>第七周</h3>
-					<h3>第八周</h3>
-					<h3>第九周</h3>
-					<h3>第十周</h3>
-					<h3>第十一周</h3>
-					<h3>第十二周</h3>
+					<h3>第一周 洋菜球</h3>
+					<iframe src="https://drive.google.com/file/d/1wdcOFaEggbgRE6M5t6lKS2I2asg2WPhR/preview" width="840"
+						height="1188"></iframe>
+					<h3>第二周 洋菜球</h3>
+					<iframe src="https://drive.google.com/file/d/1YTWLzzQ-IIZDdZa0Pz6-LpCfrtG4s6yh/preview" width="840"
+						height="1188"></iframe>
+					<h3>第三周 洋菜球</h3>
+					<iframe src="https://drive.google.com/file/d/1gO8l42qWu6fyRpk_eUHpKY2u4ky7aElo/preview" width="840"
+						height="1188"></iframe>
+					<h3>第四周 洋菜球</h3>
+					<iframe src="https://drive.google.com/file/d/1mAbm6d_0IBsaKz6iff1BpdcxFQk5gApE/preview" width="840"
+						height="1188"></iframe>
+					<h3>第五周 PVA球</h3>
+					<iframe src="https://drive.google.com/file/d/1csYRI1SRhHzqsM0WiCeTv_ExhQE40DOX/preview" width="840"
+						height="1188"></iframe>
+					<h3>第六周 PVA球</h3>
+					<iframe src="https://drive.google.com/file/d/1RODtb9O-PpDE8ktQT6udeRRs6M0xYcvv/preview" width="840"
+						height="1188"></iframe>
+					<h3>第七周 PVA球</h3>
+					<iframe src="https://drive.google.com/file/d/1NeyZ7fDQeRtBpUX6RnHT-TGaMDKro16n/preview" width="840"
+						height="1188"></iframe>
+					<h3>第八周 PVA球</h3>
+					<iframe src="https://drive.google.com/file/d/1bz859tzuRo51sLxzBxr7sihZNM-aFEnE/preview" width="840"
+						height="1188"></iframe>
+					<h3>第九周 麵團球</h3>
+					<iframe src="https://drive.google.com/file/d/15ASA31AIjcYCLIejgcGzhKpJ9z2oL2yU/preview" width="840"
+						height="1188"></iframe>
+					<h3>第十周 麵團球</h3>
+					<iframe src="https://drive.google.com/file/d/1gPN4C9z-acvcFfTzPya3130d9kIlhC5z/preview" width="840"
+						height="1188"></iframe>
+					<h3>第十一周 麵團球</h3>
+					<iframe src="https://drive.google.com/file/d/1gnf5z7QskGl4unpizDhFGzDCPwyhH73u/preview" width="840"
+						height="1188"></iframe>
+					<h3>第十二周 麵團球</h3>
+					<iframe src="https://drive.google.com/file/d/1AGE2xGuCUFvU3-ShaSdHnNakthi-HAdw/preview" width="840"
+						height="1188"></iframe>
 					<h3>統整總報告</h3>
-					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840s"
+					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840"
 						height="1188"></iframe>
 					<h3>上台報告影片:第一次</h3>
 					<h3>上台報告影片:第二次(示範組)</h3>
 					<h3>與同學分享海報</h3>
-					<iframe src="https://drive.google.com/file/d/1qC6TUjz7J61hsPydA2YZBvX_6vJzaceO/preview" width="640"
-						height="480"></iframe>
+					<iframe src="https://drive.google.com/file/d/1qC6TUjz7J61hsPydA2YZBvX_6vJzaceO/preview" width="840"
+						height="1188"></iframe>
+					<h3>實驗照片</h3>
 					<h3>心得</h3>
 					<p>經過了一個學期的努力，我總算完成了這一項探究與實作的浩大工程。在這一路上我學了非常多的知識，從最開始完全不知道交聯作用是甚麼就開始實驗，第一次嘗試時，完全不知道該怎麼樣才能把洋菜凝膠給放進扭蛋模具裡面，一直燙到自己的手，而且求裡面還充滿了空氣，完全不能用，導致第一周的實驗就慘澹收場
 					</p>
