--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -54,9 +54,12 @@
 						<p>高二上學期</p>
 						<h2>彈力四射</h2>
 					</header>
+					<h3>簡述</h3>
+					<p>經過了一個學期的努力，我總算完成了這一項探究與實作的浩大工程。在這一路上我學了非常多的知識，從最開始完全不知道交聯作用是甚麼就開始實驗，第一次嘗試時，完全不知道該怎麼樣才能把洋菜凝膠給放進扭蛋模具裡面，一直燙到自己的手，而且求裡面還充滿了空氣，完全不能用，導致第一周的實驗就慘澹收場
+					</p>
 					<h3>第一周 洋菜球</h3>
 					<iframe src="https://drive.google.com/file/d/1wdcOFaEggbgRE6M5t6lKS2I2asg2WPhR/preview" width="840"
-						height="1188"></iframe>
+						height="1188" margin: 0px auto;></iframe>
 					<h3>第二周 洋菜球</h3>
 					<iframe src="https://drive.google.com/file/d/1YTWLzzQ-IIZDdZa0Pz6-LpCfrtG4s6yh/preview" width="840"
 						height="1188"></iframe>
