--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -59,7 +59,7 @@
 					</p>
 					<h3>第一周 洋菜球</h3>
 					<iframe src="https://drive.google.com/file/d/1wdcOFaEggbgRE6M5t6lKS2I2asg2WPhR/preview" width="840"
-						height="1188" margin: 0px auto;></iframe>
+						height="1188"></iframe>
 					<h3>第二周 洋菜球</h3>
 					<iframe src="https://drive.google.com/file/d/1YTWLzzQ-IIZDdZa0Pz6-LpCfrtG4s6yh/preview" width="840"
 						height="1188"></iframe>
