--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -60,10 +60,15 @@
 					<h3>各周實驗日誌</h3>
 					<div>洋菜球：</div> <a href="0910">第一周 </a> <a href="0920">第二周　</a> <a href="0925">第三周　</a> <a
 						href="1002">第四周　</a>
+					<div>洋菜球：</div> <a href="0910">第一周 </a> <a href="0920">第二周　</a> <a href="0925">第三周　</a> <a
+						href="1002">第四周　</a>
+					<div>洋菜球：</div> <a href="0910">第一周 </a> <a href="0920">第二周　</a> <a href="0925">第三周　</a> <a
+						href="1002">第四周　</a>
+
 					<h3>第一周 洋菜球</h3>
 					<div id="0910"><iframe
-							src="https://drive.google.com/file/d/1wdcOFaEggbgRE6M5t6lKS2I2asg2WPhR/preview" width="840"
-							height="1188"></iframe>
+							src="https://drive.google.com/file/d/1wdcOFaEggbgRE6M5t6lKS2I2asg2WPhR/preview" width=63%
+							height=89.1%></iframe>
 					</div>
 					<h3>第二周 洋菜球</h3>
 					<iframe src="https://drive.google.com/file/d/1YTWLzzQ-IIZDdZa0Pz6-LpCfrtG4s6yh/preview" width="840"
