--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -60,47 +60,68 @@
 					<h3>各周實驗日誌</h3>
 					<div>洋菜球：</div> <a href="#0910">第一周</a> <a href="#0920">第二周</a> <a href="#0925">第三周</a> <a
 						href="#1002">第四周</a>
-					<div>洋菜球：</div> <a href="0910">第一周</a> <a href="0920">第二周</a> <a href="0925">第三周</a> <a
-						href="1002">第四周　</a>
-					<div>洋菜球：</div> <a href="0910">第一周</a> <a href="0920">第二周</a> <a href="0925">第三周</a> <a
-						href="1002">第四周</a>
-
-					<h3>第一周 洋菜球</h3>
+					<div>PVA球：</div> <a href="#1015">第一周</a> <a href="#1021">第二周</a> <a href="#1026">第三周</a> <a
+						href="#1102">第四周</a>
+					<div>麵團球：</div> <a href="#1109">第一周</a> <a href="#1117">第二周</a> <a href="#1122">第三周</a> <a
+						href="#1205">第四周</a>
 					<div id="0910">
-						<iframe src="https://drive.google.com/file/d/1wdcOFaEggbgRE6M5t6lKS2I2asg2WPhR/preview"
-							width="63%" height="89.1%"></iframe>
+						<h3>第一周 洋菜球</h3>
 					</div>
-					<h3>第二周 洋菜球</h3>
+					<iframe src="https://drive.google.com/file/d/1wdcOFaEggbgRE6M5t6lKS2I2asg2WPhR/preview" width="840"
+						height="1188"></iframe>
+					<div id="0920">
+						<h3>第二周 洋菜球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1YTWLzzQ-IIZDdZa0Pz6-LpCfrtG4s6yh/preview" width="840"
 						height="1188"></iframe>
-					<h3>第三周 洋菜球</h3>
+					<div id="0925">
+						<h3>第三周 洋菜球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1gO8l42qWu6fyRpk_eUHpKY2u4ky7aElo/preview" width="840"
 						height="1188"></iframe>
-					<h3>第四周 洋菜球</h3>
+					<div id="1002">
+						<h3>第四周 洋菜球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1mAbm6d_0IBsaKz6iff1BpdcxFQk5gApE/preview" width="840"
 						height="1188"></iframe>
-					<h3>第五周 PVA球</h3>
+					<div id="1015">
+						<h3>第五周 PVA球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1csYRI1SRhHzqsM0WiCeTv_ExhQE40DOX/preview" width="840"
 						height="1188"></iframe>
-					<h3>第六周 PVA球</h3>
+					<div id="1021">
+						<h3>第六周 PVA球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1RODtb9O-PpDE8ktQT6udeRRs6M0xYcvv/preview" width="840"
 						height="1188"></iframe>
-					<h3>第七周 PVA球</h3>
+					<div id="1026">
+						<h3>第七周 PVA球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1NeyZ7fDQeRtBpUX6RnHT-TGaMDKro16n/preview" width="840"
 						height="1188"></iframe>
-					<h3>第八周 PVA球</h3>
+					<div id="1102">
+						<h3>第八周 PVA球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1bz859tzuRo51sLxzBxr7sihZNM-aFEnE/preview" width="840"
 						height="1188"></iframe>
-					<h3>第九周 麵團球</h3>
+					<div id="1109">
+						<h3>第九周 麵團球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/15ASA31AIjcYCLIejgcGzhKpJ9z2oL2yU/preview" width="840"
 						height="1188"></iframe>
-					<h3>第十周 麵團球</h3>
+					<div id="1117">
+						<h3>第十周 麵團球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1gPN4C9z-acvcFfTzPya3130d9kIlhC5z/preview" width="840"
 						height="1188"></iframe>
-					<h3>第十一周 麵團球</h3>
+					<div id="1122">
+						<h3>第十一周 麵團球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1gnf5z7QskGl4unpizDhFGzDCPwyhH73u/preview" width="840"
 						height="1188"></iframe>
-					<h3>第十二周 麵團球</h3>
+					<div id="1205">
+						<h3>第十二周 麵團球</h3>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1AGE2xGuCUFvU3-ShaSdHnNakthi-HAdw/preview" width="840"
 						height="1188"></iframe>
 					<h3>統整總報告</h3>
