--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -128,7 +128,13 @@
 					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840"
 						height="1188"></iframe>
 					<h3>上台報告影片:第一次</h3>
+					<iframe width="1120" height="630" src="https://www.youtube.com/embed/lAdDi6i_yBs" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
 					<h3>上台報告影片:第二次(示範組)</h3>
+					<iframe width="1120" height="630" src="https://www.youtube.com/embed/NAnUlmgelyw" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
 					<h3>與同學分享海報</h3>
 					<iframe src="https://drive.google.com/file/d/1qC6TUjz7J61hsPydA2YZBvX_6vJzaceO/preview" width="840"
 						height="1188"></iframe>
