--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -55,11 +55,11 @@
 						<h2>彈力四射</h2>
 					</header>
 					<h3>簡述</h3>
-					<p>經過了一個學期的努力，我總算完成了這一項探究與實作的浩大工程。在這一路上我學了非常多的知識，從最開始完全不知道交聯作用是甚麼就開始實驗，第一次嘗試時，完全不知道該怎麼樣才能把洋菜凝膠給放進扭蛋模具裡面，一直燙到自己的手，而且求裡面還充滿了空氣，完全不能用，導致第一周的實驗就慘澹收場
+					<p>從探索生活周遭的事物開始，一步步的研究彈性的奧秘。透過生活中常見的幾種材料作為實驗的主體，進行一連串的變因調整，希望可以獲得彈性更好的球體。並且在調整的過程中一步一步地去學習背後的知識與科學原理，更以此作為持續向下研究的依據。經由每周撰寫實驗日誌記錄過程，最終完成總結的報告、簡報、與海報和同學分享。
 					</p>
 					<h3>各周實驗日誌</h3>
 					<div>洋菜球：</div> <a href="#0910">第一周</a> <a href="#0920">第二周</a> <a href="#0925">第三周</a> <a
-						href="#1002">第四周</a>
+						href="#1002">第四周</a> <a href="#extra">洋菜球原理補充</a>
 					<div>PVA球：</div> <a href="#1015">第一周</a> <a href="#1021">第二周</a> <a href="#1026">第三周</a> <a
 						href="#1102">第四周</a>
 					<div>麵團球：</div> <a href="#1109">第一周</a> <a href="#1117">第二周</a> <a href="#1122">第三周</a> <a
@@ -83,6 +83,11 @@
 						<h3>第四周 洋菜球</h3>
 					</div>
 					<iframe src="https://drive.google.com/file/d/1mAbm6d_0IBsaKz6iff1BpdcxFQk5gApE/preview" width="840"
+						height="1188"></iframe>
+					<div id="extra">
+						<h3>洋菜球原理補充</h3>
+					</div>
+					<iframe src="https://drive.google.com/file/d/1-zLT_2uTWfKq0UT7wdoXF2wGQjLQL-HN/preview" width="840"
 						height="1188"></iframe>
 					<div id="1015">
 						<h3>第五周 PVA球</h3>
@@ -138,11 +143,15 @@
 					<h3>與同學分享海報</h3>
 					<iframe src="https://drive.google.com/file/d/1qC6TUjz7J61hsPydA2YZBvX_6vJzaceO/preview" width="840"
 						height="1188"></iframe>
-					<h3>實驗照片</h3>
 					<h3>心得</h3>
-					<p>經過了一個學期的努力，我總算完成了這一項探究與實作的浩大工程。在這一路上我學了非常多的知識，從最開始完全不知道交聯作用是甚麼就開始實驗，第一次嘗試時，完全不知道該怎麼樣才能把洋菜凝膠給放進扭蛋模具裡面，一直燙到自己的手，而且求裡面還充滿了空氣，完全不能用，導致第一周的實驗就慘澹收場
+					<p>經過了一個學期的努力，度過許多沒日沒夜的日子，我總算完成了這一項探究與實作的浩大工程。在這一路上我學了非常多的知識，從最開始完全不知道交聯作用是甚麼就開始實驗，第一次嘗試時，完全不知道該怎麼樣才能把洋菜凝膠給放進扭蛋模具裡面，一直燙到自己的手，而且球裡面還充滿了空氣，完全不能用，導致第一周的實驗就慘澹收場，到後面逐漸得心應手，能夠掌握實驗的訣竅，用更快更好更安全的方式完成。而在過程中我覺得學到最多的大概分成三個面向：蒐集資料、實驗誤差、團隊配合。
 					</p>
-
+					<p>蒐集資料這一塊，我認為最大的問題是在時間這塊。由於實驗過程中其實許多問題的發生都是出乎意料的，實驗後檢查數據時也才會發現有不少根預測的不同的地方，這時候就需要去進行大量的資料蒐集才能找到背後的原因，甚至是要自己去拼湊出可能的答案。當然這是一個可以讓自己去學習許多額外知識以及增進自已的科學素養的大號機會，但面對現實的沉重壓力，同時面對其他的課業與考試要處理，依然需要花大量時間在製作每一週的日誌，其中又甚至有超過一半的時間都是在網路上查詢許多自己以前從來沒有接觸過的科學知識，尤其當這方面的知識是老師沒有提到過的，更是需要煞費苦心才能找到相關的資料，有時也不一定正確，更要重新花時間去找出原因，希望下次可以有更好的方式蒐集資料，亦或是能夠與學校的課堂本身有更多的關聯。
+					</p>
+					<p>實驗誤差大多是建立在設備不夠完整，實驗步驟不夠精確，流程不夠清楚，許多變因一開始沒有考慮到而可能對實驗造成影響等原因。那這方面在現行階段下實在是很難去解決這方面的問題，因為實在有太多問題會因為現實面而只好忽略，畢竟無法花大量的經費在進行少次數的實驗而購買許多專業器具，例如控制力道與時間的揉麵機；為了符合實驗時間而多人同時製作，但每個人的手法、力道、所揉進去的空氣量可能都有所差異。面對這樣的情況，我只希望之後能盡可能地減少這些外在因素並且努力去控制每一項控制變因。
+					</p>
+					<p>團隊合作一直都是團體活動中極為重要的一環，而我認為我最需要的就是學會如何將工作適當的分給每一個人，而不是沒日沒夜的自己做著，即便隊友的能力不是最頂尖，但仍然是可以有所發揮的。不過這或許也就是團隊中經常會發生的事情吧，大家都相信能力好的人可以勝任工作，但經常性會發生的就是大部分的工作都是特定的人在製作，同時責任也是他們在承擔，的就是大部分的工作都是特定的人在製作，同時責任也是他們在承擔，即便過程中學到的許多知識，但付出的代價不僅僅只有時間而已，賠上自己的健康也是有可能的。希望自己之後能做得更好，大家都能學到更多的知識，有所成長。
+					</p>
 				</div>
 			</div>
 		</div>
