--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -57,6 +57,17 @@
 					<h3>簡述</h3>
 					<p>從探索生活周遭的事物開始，一步步的研究彈性的奧秘。透過生活中常見的幾種材料作為實驗的主體，進行一連串的變因調整，希望可以獲得彈性更好的球體。並且在調整的過程中一步一步地去學習背後的知識與科學原理，更以此作為持續向下研究的依據。經由每周撰寫實驗日誌記錄過程，最終完成總結的報告、簡報、與海報和同學分享。
 					</p>
+					<h3>上台報告影片:第一次</h3>
+					<iframe width="1120" height="630" src="https://www.youtube.com/embed/lAdDi6i_yBs" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+					<h3>上台報告影片:第二次(示範組)</h3>
+					<iframe width="1120" height="630" src="https://www.youtube.com/embed/NAnUlmgelyw" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+					<h3>統整總報告</h3>
+					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840"
+						height="1188"></iframe>
 					<h3>各周實驗日誌</h3>
 					<div>洋菜球：</div> <a href="#0910">第一周</a> <a href="#0920">第二周</a> <a href="#0925">第三周</a> <a
 						href="#1002">第四周</a> <a href="#extra">洋菜球原理補充</a>
@@ -129,17 +140,6 @@
 					</div>
 					<iframe src="https://drive.google.com/file/d/1AGE2xGuCUFvU3-ShaSdHnNakthi-HAdw/preview" width="840"
 						height="1188"></iframe>
-					<h3>統整總報告</h3>
-					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840"
-						height="1188"></iframe>
-					<h3>上台報告影片:第一次</h3>
-					<iframe width="1120" height="630" src="https://www.youtube.com/embed/lAdDi6i_yBs" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe>
-					<h3>上台報告影片:第二次(示範組)</h3>
-					<iframe width="1120" height="630" src="https://www.youtube.com/embed/NAnUlmgelyw" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe>
 					<h3>與同學分享海報</h3>
 					<iframe src="https://drive.google.com/file/d/1qC6TUjz7J61hsPydA2YZBvX_6vJzaceO/preview" width="840"
 						height="1188"></iframe>
@@ -150,7 +150,7 @@
 					</p>
 					<p>實驗誤差大多是建立在設備不夠完整，實驗步驟不夠精確，流程不夠清楚，許多變因一開始沒有考慮到而可能對實驗造成影響等原因。那這方面在現行階段下實在是很難去解決這方面的問題，因為實在有太多問題會因為現實面而只好忽略，畢竟無法花大量的經費在進行少次數的實驗而購買許多專業器具，例如控制力道與時間的揉麵機；為了符合實驗時間而多人同時製作，但每個人的手法、力道、所揉進去的空氣量可能都有所差異。面對這樣的情況，我只希望之後能盡可能地減少這些外在因素並且努力去控制每一項控制變因。
 					</p>
-					<p>團隊合作一直都是團體活動中極為重要的一環，而我認為我最需要的就是學會如何將工作適當的分給每一個人，而不是沒日沒夜的自己做著，即便隊友的能力不是最頂尖，但仍然是可以有所發揮的。不過這或許也就是團隊中經常會發生的事情吧，大家都相信能力好的人可以勝任工作，但經常性會發生的就是大部分的工作都是特定的人在製作，同時責任也是他們在承擔，的就是大部分的工作都是特定的人在製作，同時責任也是他們在承擔，即便過程中學到的許多知識，但付出的代價不僅僅只有時間而已，賠上自己的健康也是有可能的。希望自己之後能做得更好，大家都能學到更多的知識，有所成長。
+					<p>團隊合作一直都是團體活動中極為重要的一環，而我認為我最需要的就是學會如何將工作適當的分給每一個人，而不是沒日沒夜的自己做著，即便隊友的能力不是最頂尖，但仍然是可以有所發揮的。不過這或許也就是團隊中經常會發生的事情吧，大家都相信能力好的人可以勝任工作，但經常性會發生的就是大部分的工作都是特定的人在製作，同時責任也是他們在承擔，的就是大部分的工作都是特定的人在製作，同時責任也是他們在承擔，即便過程中學到的許多知識，但付出的代價不僅僅只有時間而已，賠上自己的健康也是有可能的。希望自己之後能做得更好，大家都能學到更多的知識，有所成長。=
 					</p>
 				</div>
 			</div>
