--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>Kimi's high school experience</title>
+  <title>Kimi's profile</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 
   <!-- Header -->
   <header id="header" class="alt">
-    <div class="logo"><a href="index.html">Kimi <span>'s high school experience</span></a></div>
+    <div class="logo"><a href="index.html">Kimi <span>'s profile</span></a></div>
     <a href="#menu">Menu</a>
   </header>
 
