--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -61,6 +61,7 @@
 					<iframe width="1120" height="630" src="https://www.youtube.com/watch?v=bcpEZVaKLag" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/bcpEZVaKLag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
 					<h3>海報報告影片:</h3>
 					<iframe width="1120" height="630" src="https://www.youtube.com/watch?v=kVR8uet1V_8" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
