--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -58,18 +58,11 @@
 					<p>從探索生活周遭的事物開始，一步步的研究起司的奧秘。以牛奶製造起司作為研究主題，嘗試去了解不同凝聚方式的差異，進行一連串的變因調整，希望可以獲得更好的凝聚效果。並且在調整的過程中一步一步地去學習背後的知識與科學原理，更以此作為持續向下研究的依據。經由每周撰寫實驗日誌記錄過程，最終完成總結的報告、簡報、與海報和同學分享。
 					</p>
 					<h3>簡報報告影片:</h3>
-					<iframe width="1120" height="630" src="https://www.youtube.com/watch?v=bcpEZVaKLag" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/bcpEZVaKLag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+					<iframe width="1120" height="630" src="https://www.youtube.com/embed/bcpEZVaKLag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
 					<h3>海報報告影片:</h3>
-					<iframe width="1120" height="630" src="https://www.youtube.com/watch?v=kVR8uet1V_8" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe>
+					<iframe width="1120" height="630" src="https://www.youtube.com/embed/kVR8uet1V_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<h3>回答同學提問報告影片:</h3>
-					<iframe width="1120" height="630" src="https://www.youtube.com/watch?v=tKbUx1Bccz4" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe>
+					<iframe width="1120" height="630" src="https://www.youtube.com/embed/tKbUx1Bccz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<h3>統整總報告</h3>
 					<iframe src="https://drive.google.com/file/d/1UA47bGrTonVQdKXC28CMmmYn82aiDe8Z/preview" width="840"
 						height="1188"></iframe>
