--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -63,18 +63,22 @@
 					<iframe width="1120" height="630" src="https://www.youtube.com/embed/kVR8uet1V_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<h3>回答同學提問報告影片:</h3>
 					<iframe width="1120" height="630" src="https://www.youtube.com/embed/tKbUx1Bccz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<h3>統整總報告</h3>
+					<h3>統整總報告（附錄中內含每週實驗紀錄）</h3>
 					<iframe src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" width="840"
 						height="1188"></iframe>
 					
 					<h3>心得</h3>
-					<p>經過了一個學期的努力，度過許多沒日沒夜的日子，我總算完成了這一項探究與實作的浩大工程。在這一路上我學了非常多的知識，從最開始完全不知道交聯作用是甚麼就開始實驗，第一次嘗試時，完全不知道該怎麼樣才能把洋菜凝膠給放進扭蛋模具裡面，一直燙到自己的手，而且球裡面還充滿了空氣，完全不能用，導致第一周的實驗就慘澹收場，到後面逐漸得心應手，能夠掌握實驗的訣竅，用更快更好更安全的方式完成。而在過程中我覺得學到最多的大概分成三個面向：蒐集資料、實驗誤差、團隊配合。
+					<p>探究與實作,一個讓人又愛又恨的科目。
 					</p>
-					<p>蒐集資料這一塊，我認為最大的問題是在時間這塊。由於實驗過程中其實許多問題的發生都是出乎意料的，實驗後檢查數據時也才會發現有不少根預測的不同的地方，這時候就需要去進行大量的資料蒐集才能找到背後的原因，甚至是要自己去拼湊出可能的答案。當然這是一個可以讓自己去學習許多額外知識以及增進自已的科學素養的大號機會，但面對現實的沉重壓力，同時面對其他的課業與考試要處理，依然需要花大量時間在製作每一週的日誌，其中又甚至有超過一半的時間都是在網路上查詢許多自己以前從來沒有接觸過的科學知識，尤其當這方面的知識是老師沒有提到過的，更是需要煞費苦心才能找到相關的資料，有時也不一定正確，更要重新花時間去找出原因，希望下次可以有更好的方式蒐集資料，亦或是能夠與學校的課堂本身有更多的關聯。
+					<p>上課的內容不多,但背後的去研究的知識卻是原先的好幾倍,而這個過程自然就是「探究」。 實驗課的努力操作,每一次做到午餐時間都要結束,花在實驗室的每分每秒都是「實作」。
 					</p>
-					<p>實驗誤差大多是建立在設備不夠完整，實驗步驟不夠精確，流程不夠清楚，許多變因一開始沒有考慮到而可能對實驗造成影響等原因。那這方面在現行階段下實在是很難去解決這方面的問題，因為實在有太多問題會因為現實面而只好忽略，畢竟無法花大量的經費在進行少次數的實驗而購買許多專業器具，例如控制力道與時間的揉麵機；為了符合實驗時間而多人同時製作，但每個人的手法、力道、所揉進去的空氣量可能都有所差異。面對這樣的情況，我只希望之後能盡可能地減少這些外在因素並且努力去控制每一項控制變因。
+					<p>在這一整個學期之中,我認為我學到最大的就是探究的過程。在化學凝聚的時候,老師們只有說出現象,也就是——鹽析。都是從化學的角度去解釋其中的現象,而無法透過物理上或數學性的推導出實驗出現的原因。也就是因為這樣,我心中充滿了困惑,想要去理解背後原因的好奇心始終無法滿足,即便是找了物理老師也沒有一個好的答案。而在這不斷思考的過程中,我似乎就體驗了科學家的世界。面對無法解答的問題,我開始透過以前學過的各種知識,真正的去建立假設,設計模型,提出自己的理論與看法,然後發現假設中的錯誤,進行修正,然後不斷重複自己的想法,過程中也和老師們討論的好幾次,直到最後才提出一個真正合理的假設出來。而這個過程正是整個課堂中最大的收穫。
 					</p>
-					<p>團隊合作一直都是團體活動中極為重要的一環，而我認為我最需要的就是學會如何將工作適當的分給每一個人，而不是沒日沒夜的自己做著，即便隊友的能力不是最頂尖，但仍然是可以有所發揮的。不過這或許也就是團隊中經常會發生的事情吧，大家都相信能力好的人可以勝任工作，但經常性會發生的就是大部分的工作都是特定的人在製作，同時責任也是他們在承擔，的就是大部分的工作都是特定的人在製作，同時責任也是他們在承擔，即便過程中學到的許多知識，但付出的代價不僅僅只有時間而已，賠上自己的健康也是有可能的。希望自己之後能做得更好，大家都能學到更多的知識，有所成長。
+					<p>更甚是針對連老師都沒有提出但我們卻有興趣的問題，我們依舊選擇去努力直面他，並嘗試研究。由於整個實驗過程中，都是使用同一種的牛奶品牌。而我們對於不同品牌的牛奶間的差異有著更多的興趣，也開始研究，卻也在過程中學習到更多相關知識，尤其是在不同消毒方式上的差異，有著相當程度的了解。
+					</p>
+					<p>辛苦嗎?當然辛苦。但沉浸在知識的海洋中,努力去探索每個現象發生背後的成因,滿足自己的求知慾與好奇心,因為有這些美好,才讓我有動力繼續探索下去,即便過程十分辛苦,我依舊會持續前進。
+					</p>
+					<p>我認為這堂課的精神就是——透過「實作」來踏入世界,但經過「探究」才能真正了解。
 					</p>
 				</div>
 			</div>
