--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -25,8 +25,9 @@
 	<nav id="menu">
 		<ul class="links">
 			<li><a href="index.html">主頁</a></li>
-			<li><a href="Inquiry_and_Practice.html">探究與實作</a></li>
-			<li><a href="School_Carnivals.html">校慶園遊會</a></li>
+			<li><a href="Inquiry_and_Practice.html">探究與實作 彈力四射</a></li>
+			<li><a href="Inquiry_and_Practice2.html">探究與實作 凝聚吧！起司！</a></li>
+			<li><a href="School_Carnivals.html">校慶園遊會 各項產品廣告</a></li>
 			<li><a href="physical.html">物理</a></li>
 			<li><a href="chemistry.html">化學</a></li>
 			<li><a href="biology.html">生物</a></li>
@@ -59,6 +60,10 @@
 					</p>
 					<h3>簡報報告影片:</h3>
 					<iframe width="1120" height="630" src="https://www.youtube.com/embed/bcpEZVaKLag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+					<div class="videobox">
+						<iframe frameborder="0" src="https://www.youtube.com/embed/bcpEZVaKLag" allowFullScreen="true">
+						</iframe>
+					</div>
 					<h3>海報報告影片:</h3>
 					<iframe width="1120" height="630" src="https://www.youtube.com/embed/kVR8uet1V_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<h3>回答同學提問報告影片:</h3>
