--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -25,8 +25,8 @@
 	<nav id="menu">
 		<ul class="links">
 			<li><a href="index.html">主頁</a></li>
-			<li><a href="Inquiry_and_Practice.html">探究與實作 彈力四射</a></li>
-			<li><a href="Inquiry_and_Practice2.html">探究與實作 凝聚吧！起司！</a></li>
+			<li><a href="Inquiry_and_Practice.html">探究與實作 - 彈力四射</a></li>
+			<li><a href="Inquiry_and_Practice2.html">探究與實作 - 凝聚吧！起司！</a></li>
 			<li><a href="School_Carnivals.html">校慶園遊會 各項產品廣告</a></li>
 			<li><a href="physical.html">物理</a></li>
 			<li><a href="chemistry.html">化學</a></li>
