--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -74,6 +74,10 @@
 						</iframe>
 					</div>
 					<h3>統整總報告（附錄中內含每週實驗紀錄）</h3>
+					<div class="documentbox">
+						<iframe frameborder="0" src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" allowFullScreen="true">
+						</iframe>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" width="840"
 						height="1188"></iframe>
 					
