--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -74,7 +74,7 @@
 						</iframe>
 					</div>
 					<h3>統整總報告（附錄中內含每週實驗紀錄）</h3>
-					<div class="documentbox">
+					<div class="document">
 						<iframe frameborder="0" src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" allowFullScreen="true">
 						</iframe>
 					</div>
