--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -78,6 +78,10 @@
 						<iframe frameborder="0" src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" allowFullScreen="true">
 						</iframe>
 					</div>
+					<div class="videobox">
+						<iframe frameborder="0" src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" allowFullScreen="true">
+						</iframe>
+					</div>
 					<iframe src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" width="840"
 						height="1188"></iframe>
 					
