--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -25,12 +25,11 @@
 	<nav id="menu">
 		<ul class="links">
 			<li><a href="index.html">主頁</a></li>
-			<li><a href="Inquiry_and_Practice.html">探究與實作</a></li>
-			<li><a href="School_Carnivals.html">校慶園遊會</a></li>
-			<li><a href="physical.html">物理</a></li>
-			<li><a href="chemistry.html">化學</a></li>
-			<li><a href="biology.html">生物</a></li>
-			<li><a href="mathematics.html">數學</a></li>
+			<li><a href="Inquiry_and_Practice.html">探究與實作 - 彈力四射</a></li>
+			<li><a href="Inquiry_and_Practice2.html">探究與實作 - 凝聚吧！起司！</a></li>
+			<li><a href="School_Carnivals.html">校慶園遊會 - 各項產品廣告</a></li>
+			<li><a href="physical.html">物理 - 都卜勒現象</a></li>
+			<li><a href="information_technology.html">資訊科技 - 程式作品集</a></li>
 
 		</ul>
 	</nav>
