--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Kimi's profile</title>
+	<title>探究與實作 - 凝聚吧！起司！</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
