--- a/School_Carnivals.html
+++ b/School_Carnivals.html
@@ -116,7 +116,7 @@
 					<p>
 						<h3>校慶園遊會企劃與執行報告:</h3>
 						<div class="document">
-							<iframe frameborder="0" src="https://drive.google.com/file/d/1rvgEaf-G2NaAGDKBY4YzVEtl3mhUf_yh/view?usp=sharing" allowFullScreen="true">
+							<iframe frameborder="0" src="https://drive.google.com/file/d/1rvgEaf-G2NaAGDKBY4YzVEtl3mhUf_yh/preview" allowFullScreen="true">
 							</iframe>
 						</div>
 						</p>
