--- a/School_Carnivals.html
+++ b/School_Carnivals.html
@@ -38,7 +38,7 @@
 	<section id="One" class="wrapper style3">
 		<div class="inner">
 			<header class="align-center">
-				<p>天馬行空的廣告</p>
+				<p>天馬行空的創意</p>
 				<h2>園遊會廣告</h2>
 			</header>
 		</div>
@@ -51,7 +51,7 @@
 				<div class="content">
 					<header class="align-center">
 						<p>園遊會活動</p>
-						<h2>Meow Eats 全產品廣告&IG帳號</h2>
+						<h2>Meow Eats 全產品廣告 & IG帳號</h2>
 					</header>
 					<h3>簡述</h3>
 					<p>
