--- a/physical.html
+++ b/physical.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>探究與實作 - 凝聚吧！起司！</title>
+	<title>物理 - 都卜勒現象</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -38,8 +38,8 @@
 	<section id="One" class="wrapper style3">
 		<div class="inner">
 			<header class="align-center">
-				<p>努力的心血結晶</p>
-				<h2>探究與實作</h2>
+				<p>親手設計的工具</p>
+				<h2>都卜勒現象模擬軟體</h2>
 			</header>
 		</div>
 	</section>
@@ -50,58 +50,35 @@
 			<div class="box">
 				<div class="content">
 					<header class="align-center">
-						<p>高二下學期</p>
-						<h2>凝聚吧！起司！</h2>
+						<p>物理</p>
+						<h2>模擬 救護車移動 ＆ 戰鬥機音爆 都卜勒現象</h2>
 					</header>
 					<h3>簡述</h3>
-					<p>從探索生活周遭的事物開始，一步步的研究起司的奧秘。以牛奶製造起司作為研究主題，嘗試去了解不同凝聚方式的差異，進行一連串的變因調整，希望可以獲得更好的凝聚效果。並且在調整的過程中一步一步地去學習背後的知識與科學原理，更以此作為持續向下研究的依據。經由每周撰寫實驗日誌記錄過程，最終完成總結的報告、簡報、與海報和同學分享。
+					<p>
+						由於接觸到物理上的都卜勒現象，對於每次討論情境時，只能瞬間情況下畫下一張聲波分佈圖，無法直接討論連續性的變化。而針對這樣極度不方便的方式，我選擇透過程式來解決。
+						因此學習使用 Unity & C# 並和同學合作設計相關的軟體解決此問題，透過調整波源移動速度，代表不同的物體在移動。因此也畫出一般小於音速的救護車聲波、一倍音速的戰鬥機以及兩倍音速，同時搭配後製的音效證明音爆。
+					</p>
+					<p>
+						最終也達成「將抽象化的聲波疊加化為可視化的動畫呈現」的目標。
+						同時因為解決了長久以來的問題，成為老師為同學與學弟妹們上課時的輔助教材。
 					</p>
 
 					<p>
-					<h3>簡報報告影片:</h3>
+					<h3>實際操作 & 解釋影片:</h3>
 					<div class="videobox">
-						<iframe frameborder="0" src="https://www.youtube.com/embed/bcpEZVaKLag" allowFullScreen="true">
+						<iframe frameborder="0" src="https://www.youtube.com/embed/5lvhJUk4-OI" allowFullScreen="true">
 						</iframe>
 					</div>
 					</p>
 					
 					<p>
-					<h3>海報報告影片:</h3>
-					<div class="videobox">
-						<iframe frameborder="0" src="https://www.youtube.com/embed/kVR8uet1V_8" allowFullScreen="true">
-						</iframe>
-					</div>
-					</p>
-
-					<p>
-					<h3>回答同學提問報告影片:</h3>
-					<div class="videobox">
-						<iframe frameborder="0" src="https://www.youtube.com/embed/tKbUx1Bccz4" allowFullScreen="true">
-						</iframe>
-					</div>
-					</p>
-
-					<p>
-					<h3>統整總報告（附錄中內含每週實驗紀錄）</h3>
-					<div class="document">
-						<iframe frameborder="0" src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" allowFullScreen="true">
-						</iframe>
-					</div>
-					</p>
-
-					<p>
 						<h3>心得</h3>
-						<p>探究與實作,一個讓人又愛又恨的科目。
+						<p>
+							這是我第一次透過程式，親手解決一個困擾自己，同時或許也困擾許多人的問題。對於這種情況，我很開心能夠幫助到不少人，甚至成為老師的教材一部分。
+							對我更重要的是，在這樣一個解決問題的經驗中，更是讓我接觸到原先沒有學習過的工具，讓我對於資訊領域有更深的了解。
 						</p>
-						<p>上課的內容不多,但背後的去研究的知識卻是原先的好幾倍,而這個過程自然就是「探究」。 實驗課的努力操作,每一次做到午餐時間都要結束,花在實驗室的每分每秒都是「實作」。
-						</p>
-						<p>在這一整個學期之中,我認為我學到最大的就是探究的過程。在化學凝聚的時候,老師們只有說出現象,也就是——鹽析。都是從化學的角度去解釋其中的現象,而無法透過物理上或數學性的推導出實驗出現的原因。也就是因為這樣,我心中充滿了困惑,想要去理解背後原因的好奇心始終無法滿足,即便是找了物理老師也沒有一個好的答案。而在這不斷思考的過程中,我似乎就體驗了科學家的世界。面對無法解答的問題,我開始透過以前學過的各種知識,真正的去建立假設,設計模型,提出自己的理論與看法,然後發現假設中的錯誤,進行修正,然後不斷重複自己的想法,過程中也和老師們討論的好幾次,直到最後才提出一個真正合理的假設出來。而這個過程正是整個課堂中最大的收穫。
-						</p>
-						<p>更甚是針對連老師都沒有提出但我們卻有興趣的問題，我們依舊選擇去努力直面他，並嘗試研究。由於整個實驗過程中，都是使用同一種的牛奶品牌。而我們對於不同品牌的牛奶間的差異有著更多的興趣，也開始研究，卻也在過程中學習到更多相關知識，尤其是在不同消毒方式上的差異，有著相當程度的了解。
-						</p>
-						<p>辛苦嗎?當然辛苦。但沉浸在知識的海洋中,努力去探索每個現象發生背後的成因,滿足自己的求知慾與好奇心,因為有這些美好,才讓我有動力繼續探索下去,即便過程十分辛苦,我依舊會持續前進。
-						</p>
-						<p>我認為這堂課的精神就是——透過「實作」來踏入世界,但經過「探究」才能真正了解。
+						<p>
+							最重要的是，這也建立我對於解決問題能力的提升，希望未來能夠持續透過自己的雙手與能力解決各種面臨到的問題。
 						</p>
 					</p>
 					
