--- a/information_technology.html
+++ b/information_technology.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Kimi's profile</title>
+	<title>資訊科技 - 程式作品集</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -38,8 +38,8 @@
 	<section id="One" class="wrapper style3">
 		<div class="inner">
 			<header class="align-center">
-				<p>努力的心血結晶</p>
-				<h2>探究與實作</h2>
+				<p>高中三年的學習經驗</p>
+				<h2>程式作品集</h2>
 			</header>
 		</div>
 	</section>
@@ -50,41 +50,39 @@
 			<div class="box">
 				<div class="content">
 					<header class="align-center">
-						<p>高二下學期</p>
-						<h2>凝聚吧！起司！</h2>
+						<p>一步步完成的作品</p>
+						<h2>海龜遊戲 ＆ 故事型電子書</h2>
 					</header>
 					<h3>簡述</h3>
 					<p>從探索生活周遭的事物開始，一步步的研究起司的奧秘。以牛奶製造起司作為研究主題，嘗試去了解不同凝聚方式的差異，進行一連串的變因調整，希望可以獲得更好的凝聚效果。並且在調整的過程中一步一步地去學習背後的知識與科學原理，更以此作為持續向下研究的依據。經由每周撰寫實驗日誌記錄過程，最終完成總結的報告、簡報、與海報和同學分享。
 					</p>
 
 					<p>
-					<h3>簡報報告影片:</h3>
+					<h3>海龜遊戲 實際操作影片:</h3>
 					<div class="videobox">
-						<iframe frameborder="0" src="https://www.youtube.com/embed/bcpEZVaKLag" allowFullScreen="true">
+						<iframe frameborder="0" src="https://www.youtube.com/embed/yanDW_HhD_Q" allowFullScreen="true">
 						</iframe>
 					</div>
+					</p>
+					<p>
+						
 					</p>
 					
 					<p>
-					<h3>海報報告影片:</h3>
+					<h3>故事型電子書 實際操作影片:</h3>
 					<div class="videobox">
-						<iframe frameborder="0" src="https://www.youtube.com/embed/kVR8uet1V_8" allowFullScreen="true">
+						<iframe frameborder="0" src="https://www.youtube.com/embed/Z8RMW-AwuVI" allowFullScreen="true">
 						</iframe>
 					</div>
 					</p>
-
 					<p>
-					<h3>回答同學提問報告影片:</h3>
-					<div class="videobox">
-						<iframe frameborder="0" src="https://www.youtube.com/embed/tKbUx1Bccz4" allowFullScreen="true">
-						</iframe>
-					</div>
+
 					</p>
 
 					<p>
-					<h3>統整總報告（附錄中內含每週實驗紀錄）</h3>
+					<h3>統整報告</h3>
 					<div class="document">
-						<iframe frameborder="0" src="https://drive.google.com/file/d/1WXkWbdDgiiaZKlY2hkNWHkjyf1RFVu14/preview" allowFullScreen="true">
+						<iframe frameborder="0" src="https://drive.google.com/file/d/1w9K5nGAtX0i2rHr-F-znyRZJFwybnJNY/preview" allowFullScreen="true">
 						</iframe>
 					</div>
 					</p>
