--- a/information_technology.html
+++ b/information_technology.html
@@ -54,7 +54,8 @@
 						<h2>海龜遊戲 ＆ 故事型電子書</h2>
 					</header>
 					<h3>簡述</h3>
-					<p>從探索生活周遭的事物開始，一步步的研究起司的奧秘。以牛奶製造起司作為研究主題，嘗試去了解不同凝聚方式的差異，進行一連串的變因調整，希望可以獲得更好的凝聚效果。並且在調整的過程中一步一步地去學習背後的知識與科學原理，更以此作為持續向下研究的依據。經由每周撰寫實驗日誌記錄過程，最終完成總結的報告、簡報、與海報和同學分享。
+					<p>
+						運用自身的資訊能力，
 					</p>
 
 					<p>
