--- a/Inquiry_and_Practice2.html
+++ b/Inquiry_and_Practice2.html
@@ -58,7 +58,7 @@
 					</p>
 
 					<p>
-					<h3>簡報報告影片:</h3>
+					<h3>簡報報告影片：</h3>
 					<div class="videobox">
 						<iframe frameborder="0" src="https://www.youtube.com/embed/bcpEZVaKLag" allowFullScreen="true">
 						</iframe>
@@ -66,7 +66,7 @@
 					</p>
 					
 					<p>
-					<h3>海報報告影片:</h3>
+					<h3>海報報告影片：</h3>
 					<div class="videobox">
 						<iframe frameborder="0" src="https://www.youtube.com/embed/kVR8uet1V_8" allowFullScreen="true">
 						</iframe>
@@ -74,7 +74,7 @@
 					</p>
 
 					<p>
-					<h3>回答同學提問報告影片:</h3>
+					<h3>回答同學提問報告影片：</h3>
 					<div class="videobox">
 						<iframe frameborder="0" src="https://www.youtube.com/embed/tKbUx1Bccz4" allowFullScreen="true">
 						</iframe>
