--- a/information_technology.html
+++ b/information_technology.html
@@ -64,7 +64,7 @@
 					</p>
 
 					<p>
-					<h3>海龜遊戲 實際操作影片:</h3>
+					<h3>海龜遊戲 實際操作影片：</h3>
 					<div class="videobox">
 						<iframe frameborder="0" src="https://www.youtube.com/embed/yanDW_HhD_Q" allowFullScreen="true">
 						</iframe>
@@ -81,7 +81,7 @@
 						學習最多之處在於整題程式能力的提升，對於遊戲的架構、程式碼、編寫邏輯與習慣有更多的了解。
 					</p>
 					<p>
-					<h3>故事型電子書 實際操作影片:</h3>
+					<h3>故事型電子書 實際操作影片：</h3>
 					<div class="videobox">
 						<iframe frameborder="0" src="https://www.youtube.com/embed/Z8RMW-AwuVI" allowFullScreen="true">
 						</iframe>
