--- a/physical.html
+++ b/physical.html
@@ -64,7 +64,7 @@
 					</p>
 
 					<p>
-					<h3>實際操作 & 解釋影片:</h3>
+					<h3>實際操作 & 解釋影片：</h3>
 					<div class="videobox">
 						<iframe frameborder="0" src="https://www.youtube.com/embed/5lvhJUk4-OI" allowFullScreen="true">
 						</iframe>
