--- a/Inquiry_and_Practice.html
+++ b/Inquiry_and_Practice.html
@@ -58,7 +58,7 @@
 					</p>
 
 					<p>
-						<h3>上台報告影片:第一次</h3>
+						<h3>上台報告影片：第一次</h3>
 						<div class="videobox">
 							<iframe frameborder="0" src="https://www.youtube.com/embed/lAdDi6i_yBs" allowFullScreen="true">
 							</iframe>
@@ -66,7 +66,7 @@
 					</p>
 					
 					<p>
-						<h3>上台報告影片:第二次(示範組)</h3>
+						<h3>上台報告影片：第二次(示範組)</h3>
 						<div class="videobox">
 							<iframe frameborder="0" src="https://www.youtube.com/embed/NAnUlmgelyw" allowFullScreen="true">
 							</iframe>
