--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
     </article>
   </section>
 
+  <section id="two" class="wrapper style3">
+    <div class="inner">
+      <header class="align-center">
+        <p>獨特的我</p>
+        <h2>名字 ＆ 特質</h2>
+      </header>
+    </div>
+  </section>
+
   <!-- One -->
   <section id="one" class="wrapper style2">
     <div class="inner">
