--- a/index.html
+++ b/index.html
@@ -83,14 +83,6 @@
     </article>
   </section>
 
-  <section id="two" class="wrapper style3">
-    <div class="inner">
-      <header class="align-center">
-        <p>獨特的我</p>
-        <h2>名字 ＆ 特質</h2>
-      </header>
-    </div>
-  </section>
 
   <!-- One -->
   <section id="one" class="wrapper style2">
@@ -104,8 +96,8 @@
             </div>
             <div class="content">
               <header class="align-center">
-                <p>maecenas sapien feugiat ex purus</p>
-                <h2>Lorem ipsum dolor</h2>
+                <p>名字的意義與期待</p>
+                <h2>我的名字</h2>
               </header>
               <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor
                 velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus
