--- a/index.html
+++ b/index.html
@@ -96,15 +96,12 @@
             </div>
             <div class="content">
               <header class="align-center">
-                <p>名字的意義與期待</p>
-                <h2>我的名字</h2>
+                <p>名字的期許</p>
+                <h2>兩把刷子</h2>
               </header>
-              <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor
-                velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus
-                placerat malesuada.</p>
-              <footer class="align-center">
-                <a href="#" class="button alt">Learn More</a>
-              </footer>
+              <p> 
+                
+              </p>
             </div>
           </div>
         </div>
@@ -116,15 +113,18 @@
             </div>
             <div class="content">
               <header class="align-center">
-                <p>mattis elementum sapien pretium tellus</p>
-                <h2>Vestibulum sit amet</h2>
+                <p>獨有的特質</p>
+                <h2>注重細節 & 領導力 & 求知慾</h2>
               </header>
-              <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor
-                velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus
-                placerat malesuada.</p>
-              <footer class="align-center">
-                <a href="#" class="button alt">Learn More</a>
-              </footer>
+              <h3>
+                注重細節
+              </h3>
+              <p> 
+                「注重細節，追逐完美」一直是我的做事態度。
+無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
+更因為在意細節，總注意問題的各個層面，我培養出剖析問題核心的能力。
+
+              </p>
             </div>
           </div>
         </div>
