--- a/index.html
+++ b/index.html
@@ -121,10 +121,28 @@
               </h3>
               <p> 
                 「注重細節，追逐完美」一直是我的做事態度。
-無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
-更因為在意細節，總注意問題的各個層面，我培養出剖析問題核心的能力。
-
               </p>
+              <p>
+                無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
+                更因為在意細節，總注意問題的各個層面，我培養出剖析問題核心的能力。
+              </p>
+
+              <h3>
+                領導力
+              </h3>
+              <p>
+                自小我就經常擔任領導者的角色，班級幹部、團隊組長，甚至是社團的社長都是我曾經擔任過的。
+                而這些經歷都讓我培養出帶領團隊的能力，同時也訓練出與他人溝通的技巧。
+              </p>
+
+              <h3>
+                求知慾
+              </h3>
+              <p>
+                旺盛的求知慾一直是我不斷學習新知的原動力，無論是透過何種管道，我都會盡可能地去學習各方面的知識。
+                也因此，我往往會為了許多創新的想法去學習新知來解決問題。
+              </p>
+
             </div>
           </div>
         </div>
