--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
                 <p>獨有的特質</p>
                 <h2>注重細節 & 領導力 & 求知慾</h2>
               </header>
-              
+              <h3>
+                注重細節
+              </h3>
               <br> 
                 「注重細節，追逐完美」一直是我的做事態度。
-              </br>
               <p>
                 無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
                 更因為在意細節，總注意問題的各個層面，我培養出剖析問題核心的能力。
