--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="content">
               <header class="align-center">
-                <p>名字的期許</p>
+                <p>不一樣的綽號</p>
                 <h2>兩把刷子</h2>
               </header>
               <p> 
@@ -154,8 +154,8 @@
   <section id="two" class="wrapper style3">
     <div class="inner">
       <header class="align-center">
-        <p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-        <h2>Morbi maximus justo</h2>
+        <p>高中三年的點點滴滴</p>
+        <h2>屬於我的作品</h2>
       </header>
     </div>
   </section>
