--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
               <h3>
                 注重細節
               </h3>
-              <br> 
-                「注重細節，追逐完美」一直是我的做事態度。
               <p>
                 無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
                 更因為在意細節，總注意問題的各個層面，我培養出剖析問題核心的能力。
               </p>
+              <br> 
+                因此，「注重細節，追逐完美」一直是我的做事態度。
 
               <h3>
                 領導力
