--- a/index.html
+++ b/index.html
@@ -163,14 +163,16 @@
   <!-- Three -->
   <section id="three" class="wrapper style2">
     <div class="inner">
-      <header class="align-center">
-        <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-        <h2>Morbi maximus justo</h2>
-      </header>
       <div class="gallery">
         <div>
           <div class="image fit">
             <a href="#"><img src="images/pic01.jpg" alt="" /></a>
+          </div>
+          <div class="content">
+            <header class="align-center">
+              <p>探究與實作</p>
+              <h2>彈力四射</h2>
+            </header>
           </div>
         </div>
         <div>
