--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
               <p>
                 無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
                 更因為在意細節，總注意問題的各個層面，我培養出剖析問題核心的能力。
-              </p>
-              <br> 
-                因此，「注重細節，追逐完美」一直是我的做事態度。
+                <br> 因此，「注重細節，追逐完美」一直是我的做事態度。
+              </p>             
 
               <h3>
                 領導力
@@ -170,8 +169,7 @@
           </div>
           <div class="content">
             <header class="align-center">
-              <p>探究與實作</p>
-              <h2>彈力四射</h2>
+              <h2>探究與實作 - 彈力四射</h2>
             </header>
           </div>
         </div>
@@ -179,15 +177,40 @@
           <div class="image fit">
             <a href="#"><img src="images/pic02.jpg" alt="" /></a>
           </div>
+          <div class="content">
+            <header class="align-center">
+              <h2>探究與實作 - 凝聚吧！起司！</h2>
+            </header>
+          </div>
         </div>
         <div>
           <div class="image fit">
             <a href="#"><img src="images/pic03.jpg" alt="" /></a>
           </div>
+          <div class="content">
+            <header class="align-center">
+              <h2>校慶園遊會 - 各項產品廣告</h2>
+            </header>
+          </div>
         </div>
         <div>
           <div class="image fit">
             <a href="#"><img src="images/pic04.jpg" alt="" /></a>
+          </div>
+          <div class="content">
+            <header class="align-center">
+              <h2>物理 - 都卜勒現象</h2>
+            </header>
+          </div>
+        </div>
+        <div>
+          <div class="image fit">
+            <a href="#"><img src="images/pic04.jpg" alt="" /></a>
+          </div>
+          <div class="content">
+            <header class="align-center">
+              <h2>資訊科技 - 程式作品集</h2>
+            </header>
           </div>
         </div>
       </div>
