--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
                 注重細節
               </h3>
               <p>
+                <br>「注重細節，追逐完美」一直是我的做事態度。
                 無論是報告前的多次演練，還是他人託付的事項，唯有對自己有高標準的要求，才是負有責任心的展現，足以承擔起責任。
                 更因為在意細節，總注意問題的各個層面，我培養出剖析問題核心的能力。
-                <br> 因此，「注重細節，追逐完美」一直是我的做事態度。
+                
               </p>             
 
               <h3>
@@ -169,17 +170,7 @@
           </div>
           <div class="content">
             <header class="align-center">
-              <h2>探究與實作 - 彈力四射</h2>
-            </header>
-          </div>
-        </div>
-        <div>
-          <div class="image fit">
-            <a href="#"><img src="images/pic02.jpg" alt="" /></a>
-          </div>
-          <div class="content">
-            <header class="align-center">
-              <h2>探究與實作 - 凝聚吧！起司！</h2>
+              <h2>探究與實作 - 彈力四射 & 凝聚吧！起司！</h2>
             </header>
           </div>
         </div>
